[ONNX] Update ONNX to rel-1.9 (#55889)
ONNX optimizer is deprecated in ONNX 1.9 and needs to be included in Caffe2 as a submodule.

Co-authored-by: neginraoof <neginmr@utexas.edu>

ghstack-source-id: 51ffc77ceef9fcaca44b56f902fca0e15887982d
Pull Request resolved: https://github.com/pytorch/pytorch/pull/57080

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1730,6 +1730,7 @@ cc_library(
         "@foxi",
         "@gloo",
         "@onnx",
+        "@optimizer",
         "@fmt",
     ] + if_cuda(
         [
@@ -1909,6 +1910,7 @@ cc_library(
         ":caffe2_headers",
         "@local_config_python//:python_headers",
         "@onnx",
+        "@optimizer",
     ],
     alwayslink = True,
 )
